--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # Object files
 *.o
+*.d
+*.crf
+*.lst
+*.__i
+*._i
+*.tra
 
 # Libraries
 *.lib
@@ -15,3 +21,5 @@
 *.exe
 *.out
 *.app
+*.elf
+*.hex
